# speakwith

./: .env  .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: build.yml
cmd/chat/: Cargo.toml
cmd/chat/src/: main.rs
pkg/database/: Cargo.toml  database.rs  messages.rs  rooms.rs  uploads.rs  users.rs
pkg/database/migrations/: 01_users.down.sql  01_users.up.sql  02_rooms.down.sql  02_rooms.up.sql  03_uploads.down.sql  03_uploads.up.sql  04_message_uploads.down.sql  04_message_uploads.up.sql
pkg/frontend/: Cargo.toml  api.rs  assets.rs  frontend.rs  tailwind.config.js  templates.rs
pkg/frontend/assets/: htmx.min.js  output.css
pkg/frontend/templates/: base.jinja2  home-partial.jinja2  home.jinja2  login.jinja2  profile-partial.jinja2  profile.jinja2  register.jinja2  room-partial.jinja2  room.jinja2  settings-partial.jinja2  settings.jinja2  users-partial.jinja2  users.jinja2
pkg/frontend/templates/components/: add-room.jinja2  button.jinja2  chatroom.jinja2  invite.jinja2  layout.jinja2  message-list.jinja2  message.jinja2  partial-register.jinja2  permission-search-results.jinja2  private-room-users.jinja2  profile.jinja2  room-name.jinja2  room-user.jinja2  sendmessageform.jinja2  settings.jinja2  sidebar.jinja2  text-input.jinja2  thread-view.jinja2  title.jinja2  upload-show.jinja2  uploaded-file.jinja2  user-buttons-admin.jinja2  user-buttons-disabled.jinja2  user-buttons-enabled.jinja2  user-item.jinja2  user-profile-edit.jinja2  user-profile-image-edit.jinja2  user-profile-image.jinja2  user-rooms-name.jinja2  user-search-results.jinja2  user-selection.jinja2  users.jinja2
pkg/frontend/templates/icons/: delete.jinja2  emoji.jinja2  image.jinja2  levers.jinja2  send.jinja2  settings.jinja2
pkg/rooms/: Cargo.toml  rooms.rs
pkg/uploads/: Cargo.toml  uploads.rs
pkg/users/: Cargo.toml  users.rs
