[package]
name = "uploads"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "uploads"
path = "uploads.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
tokio.workspace = true
parking_lot.workspace = true
xid.workspace = true
tokio-util = "0.7.10"
futures = "0"

database.workspace = true